[gd_scene load_steps=18 format=3 uid="uid://chgmbrk5f106r"]

[ext_resource type="PackedScene" uid="uid://eta3wslxuisi" path="res://scenes/character_creator.tscn" id="1_rvslj"]
[ext_resource type="Script" uid="uid://defop5x0yljv8" path="res://scripts/character_creator.gd" id="2_0bbpv"]
[ext_resource type="Texture2D" uid="uid://tlke5sowouio" path="res://assets/mouths/ExpressionsAssetByVerzatileDevIndiv__g166.png" id="3_ft6cd"]
[ext_resource type="Texture2D" uid="uid://dbhl8c6uetcn2" path="res://assets/mouths/ExpressionsAssetByVerzatileDevIndiv__g167.png" id="4_bb450"]
[ext_resource type="Texture2D" uid="uid://choc6bg8xg3fp" path="res://assets/mouths/ExpressionsAssetByVerzatileDevIndiv__g168.png" id="5_nfivy"]
[ext_resource type="Texture2D" uid="uid://dl4ljf7lxiti6" path="res://assets/mouths/ExpressionsAssetByVerzatileDevIndiv__g170.png" id="6_1nqs0"]
[ext_resource type="Texture2D" uid="uid://cbyn1ih1solvc" path="res://assets/mouths/ExpressionsAssetByVerzatileDevIndiv__g171.png" id="7_1iba3"]
[ext_resource type="Texture2D" uid="uid://cc2aaii6tuqi2" path="res://assets/eyes/ExpressionsAssetByVerzatileDevIndiv__g47.png" id="8_yxlcp"]
[ext_resource type="Texture2D" uid="uid://7b6p6xbmexgg" path="res://assets/eyes/ExpressionsAssetByVerzatileDevIndiv__g48.png" id="9_ebg2g"]
[ext_resource type="Texture2D" uid="uid://bgnnbgy3h3gow" path="res://assets/eyes/ExpressionsAssetByVerzatileDevIndiv__g49.png" id="10_2ofn6"]
[ext_resource type="Texture2D" uid="uid://bxex5r8r06wui" path="res://assets/eyes/ExpressionsAssetByVerzatileDevIndiv__g50.png" id="11_xa025"]
[ext_resource type="Texture2D" uid="uid://blfb41vjaes7v" path="res://assets/eyes/ExpressionsAssetByVerzatileDevIndiv__g51.png" id="12_36rkl"]
[ext_resource type="Texture2D" uid="uid://dp0oav4d4v0lv" path="res://assets/brows/ExpressionsAssetByVerzatileDevIndiv__g2.png" id="13_fs0b5"]
[ext_resource type="Texture2D" uid="uid://dqhltjfkakxdy" path="res://assets/brows/ExpressionsAssetByVerzatileDevIndiv__g3.png" id="14_ma7h6"]
[ext_resource type="Texture2D" uid="uid://drl76i70f3xrc" path="res://assets/brows/ExpressionsAssetByVerzatileDevIndiv__g4.png" id="15_e2s0e"]
[ext_resource type="Texture2D" uid="uid://ucg2x6ci8bs7" path="res://assets/brows/ExpressionsAssetByVerzatileDevIndiv__g5.png" id="16_gsxep"]
[ext_resource type="Texture2D" uid="uid://b7qtim64qcia" path="res://assets/brows/ExpressionsAssetByVerzatileDevIndiv__g7.png" id="17_v0vrg"]

[node name="Node2D" type="Node2D"]

[node name="CharacterCreator" parent="." instance=ExtResource("1_rvslj")]
script = ExtResource("2_0bbpv")
mouth_textures = Array[Texture2D]([ExtResource("3_ft6cd"), ExtResource("4_bb450"), ExtResource("5_nfivy"), ExtResource("6_1nqs0"), ExtResource("7_1iba3")])
eyes_textures = Array[Texture2D]([ExtResource("8_yxlcp"), ExtResource("9_ebg2g"), ExtResource("10_2ofn6"), ExtResource("11_xa025"), ExtResource("12_36rkl")])
brows_textures = Array[Texture2D]([ExtResource("13_fs0b5"), ExtResource("14_ma7h6"), ExtResource("15_e2s0e"), ExtResource("16_gsxep"), ExtResource("17_v0vrg")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 427.0
offset_top = 2.0
offset_right = 1151.0
offset_bottom = 654.0

[node name="BtnEyes" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Change Eyes"

[node name="BtnBrows" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Change Brows"

[node name="BtnMouth" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Change Mouths"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[connection signal="pressed" from="CanvasLayer/VBoxContainer/BtnEyes" to="CharacterCreator" method="_on_btn_eyes_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BtnBrows" to="CharacterCreator" method="_on_btn_brows_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BtnMouth" to="CharacterCreator" method="_on_btn_mouth_pressed"]
